--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
     <meta name="theme-color" content="#D7AFF7" />
@@ -7,8 +7,8 @@
     <title>Cat library</title>
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img/cat 512.png" type="image/x-icon">
-    <link rel="apple-touch-icon" href="img/cat 512.png">
+    <link rel="shortcut icon" href="img/cat-512.png" type="image/x-icon">
+    <link rel="apple-touch-icon" href="img/cat-512.png">
     <script src="script.js" charset="utf-8"></script>
 </head>
 <body>
